--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-/.bundle
+#/.bundle
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -13,13 +13,13 @@
 /tmp
 
 # Ignore database setup
-/config/database.yml
+# /config/database.yml
 
 #Ignore API Key files
-/config/environment_variables.yml
+#/config/environment_variables.yml
 
 #ignore Google API .json file
-/config/UMDCSA-1a4e30ad76a2.json
+#/config/UMDCSA-1a4e30ad76a2.json
 
 #ignore assets folder
 /public/assets/*
