remove database.yml

--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,13 @@
 /tmp
 
 # Ignore database setup
-# /config/database.yml
+/config/database.yml
 
 #Ignore API Key files
-#/config/environment_variables.yml
+/config/environment_variables.yml
 
 #ignore Google API .json file
-#/config/UMDCSA-1a4e30ad76a2.json
+/config/UMDCSA-1a4e30ad76a2.json
 
 #ignore assets folder
 /public/assets/*
